# FinalAssessmentRobotics

./: README.md
final_project/: CMakeLists.txt  package.xml  single_robot.rviz
final_project/launch/: move_base_amcl_10cm.launch  move_base_file.launch  move_base_gmapping_5cm.launch
final_project/move_base_config/: base_global_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base.xml
final_project/scripts/: simple_navigation_goals.py
final_project/world/: IRX-Clamps-Ass-3-mapNew.pgm  IRX-Clamps-Ass-3-mapNew.world  IRX-Clamps-Ass-3-mapNew.yaml
navigation_files/: CMakeLists.txt  package.xml
navigation_files/src/: TSP_solutions.py  sequence_of_navigation_goals.py
navstack_run_files/: CMakeLists.txt  package.xml
navstack_run_files/launch/: move_base_file.launch
navstack_run_files/move_base_config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base.xml
navstack_run_files/world/: IRX-Clamps-Ass-3-mapNew.world  IRX-Clamps-Ass-3-mapNew.yaml
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: greedyTSP.py  greedyTSP.txt  our_node.py  sequence_of_navigation_goals.py  simple_navigation_goals.py
